--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,6 @@
   <title>Welcome to OpenShift</title>
 </head>
 <body>
-<h1>Hello, OpenShift. This is the 1st change introduced by Steny </h1>
+<h1>Hello, OpenShift. This is the 1st change introduced by Steny james </h1>
 </body>
 </html>
